--- a/villasteenwijk/src/index.css
+++ b/villasteenwijk/src/index.css
@@ -14,6 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
+  overflow-x: hidden !important;
 }
 
 code {
@@ -26,6 +27,7 @@ code {
   margin: 0;
   box-sizing: border-box;
   font-family: luxuryFont;
+  overflow-x: hidden !important;
 }
 
 ::-webkit-scrollbar {
